a basic working version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>NAME_OF_APP</title>
+    <title>DS4F</title>
     <style type="text/css">
       html {
         overflow: auto;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <iframe
-      src="https://share.streamlit.io/sebastiandres/NAME_OF_APP/main"
+      src="https://share.streamlit.io/sebastiandres/DS4F/main"
       frameborder="0"
       marginheight="0"
       marginwidth="0"
